tests/invalid/Property_Invalid_11.whiley
property inc(bool x) -> (int r):
    x + 1